refactor(options/backup): delegate directory management to server
